minikube/multiple-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec: 
  rules:
    - host: www.animals.com
      http:
        paths:
          - path: /dogs
            pathType: Prefix
            backend:
              service:
                name: dogs-service
                port:
                  number: 80
          - path: /cats
            pathType: Prefix
            backend:
              service:
                name: cats-service
                port:
                  number: 80
